--- a/Find_SB9_Targets.ipynb
+++ b/Find_SB9_Targets.ipynb
@@ -100,7 +100,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -205,7 +205,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -244,7 +244,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 6,
        "text": [
         "<class 'pandas.core.frame.DataFrame'>\n",
         "Int64Index: 3994 entries, 0 to 3993\n",
@@ -270,7 +270,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -401,7 +401,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 7,
        "text": [
         "      Dec1  Dec2   Dec3    No  RA1  RA2     RA3 SpecType1  Vmag1     K1  \\\n",
         "56     -65    28   4.91    40    0   42  28.373       F6V  5.393  26.10   \n",
@@ -415,7 +415,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -436,13 +436,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 126,
+       "prompt_number": 8,
        "text": [
-        "'observing days:\\nday# start end\\n1 2456890.083333 2456890.291667\\n2 2456891.083333 2456891.291667\\n3 2456892.083333 2456892.291667\\n4 2456893.083333 2456893.291667\\n5 2456894.083333 2456894.291667\\n'"
+        "'observing days:\\nday# start end\\n1 2456890.083333 2456890.291667 #20th\\n2 2456891.083333 2456891.291667 #21\\n3 2456892.083333 2456892.291667 #22\\n4 2456894.083333 2456894.291667 #24\\n5 2456895.083333 2456895.291667 #25\\n'"
        ]
       }
      ],
-     "prompt_number": 126
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -501,7 +501,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -520,6 +520,7 @@
       "    peri_time = big_df['peri_time'][i] + 2400000\n",
       "    K1 = big_df['K1'][i]\n",
       "    no = big_df['No'][i]\n",
+      "    print no, K1, peri_time, P, peri_arg\n",
       "    RV = K1* np.sin( (days-peri_time)/P*2*np.pi + peri_arg/360*2*np.pi )\n",
       "    plt.plot(days, RV, linewidth = 1, label = int(no) )\n",
       "\n",
@@ -536,8 +537,25 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "40.0 26.1 2419299.11 4.8202 269.3\n",
+        "1482.0 18.42 2449986.717 2.997812 32.3\n",
+        "1847.0 16.08 2448111.768 2.93977 "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
