--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -18,7 +18,7 @@
       "# from scipy import signal, interpolate, optimize, constants\n",
       "# import pylab as plt\n",
       "import pickle\n",
-      "# import TableBrowser as TB\n",
+      "import TableBrowser as tb\n",
       "import toolbox\n",
       "import pandas\n"
      ],
@@ -31,7 +31,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "os.chdir('/Users/Carlos/Documents/HERMES/reductions/rhoTuc_long')"
+      "# os.chdir('/Users/Carlos/Documents/HERMES/reductions/rhoTuc_long/combined/')\n",
+      "os.chdir('/Users/Carlos/Documents/HERMES/reductions/HD285507_single_arc_5.76/combined/')"
      ],
      "language": "python",
      "metadata": {},
@@ -56,7 +57,7 @@
       "    def load_star_data(self, name):\n",
       "        \n",
       "#         stetson_df = pandas.read_pickle('stetson.pd')\n",
-      "        files = glob.glob('cam1/*red.fits')\n",
+      "        files = glob.glob('cam1/*.fits')\n",
       "        for thisFile in files:\n",
       "            a = pf.open(thisFile)\n",
       "            b = a['FIBRES'].data\n",
@@ -149,10 +150,9 @@
       "    def load_exposures(self, name):\n",
       "\n",
       "        for camIdx in range(4):\n",
-      "            files = glob.glob('cam'+str(camIdx+1)+'/*red.fits')    \n",
+      "            files = glob.glob('cam'+str(camIdx+1)+'/*.fits')\n",
       "            thisCam = self.cameras[camIdx]\n",
       "            for thisFile in files:    \n",
-      "                \n",
       "                HDUList = pf.open(thisFile)\n",
       "                fibreTable = HDUList['FIBRES'].data            \n",
       "                idx = fibreTable.field('NAME').strip()==name\n",
@@ -162,7 +162,8 @@
       "                        self.UTdates.append(HDUList[0].header['UTDATE'])\n",
       "                        self.UTstarts.append(HDUList[0].header['UTSTART'])\n",
       "                        self.UTends.append(HDUList[0].header['UTEND'])\n",
-      "                        self.lengths.append(HDUList[0].header['EXPOSED'])\n",
+      "                        try:self.lengths.append(HDUList[0].header['EXPOSED'])\n",
+      "                        except: self.lengths.append(0)\n",
       "                        self.JDs.append(HDUList[0].header['UTMJD'])\n",
       "                        self.plates.append(HDUList[0].header['SOURCE'])\n",
       "                        self.pivots.append(fibreTable.field('PIVOT')[idx][0])\n",
@@ -232,19 +233,19 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "thisStar = star('Giant01')\n",
+      "thisStar = star('Giant02')\n",
       "thisStar.exposures = exposures()\n",
       "thisStar.exposures.load_exposures(thisStar.name)\n",
       "thisStar.exposures.calculate_baryVels(thisStar)\n",
-      "file_pi = open('rhoTuc.obj', 'w') \n",
-      "pickle.dump(thisStar, file_pi) \n",
-      "file_pi.close()"
+      "# file_pi = open(i+'.obj', 'w') \n",
+      "# pickle.dump(thisStar, file_pi) \n",
+      "# file_pi.close()"
      ],
      "language": "python",
      "metadata": {},
@@ -253,17 +254,28 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Giant01 star created\n"
+        "Giant02 star created\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 50
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "thisStar.exposures.red_baryVels"
+      "thisCam = thisStar.exposures.cameras[1]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 55
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "thisCam.red_fluxes"
      ],
      "language": "python",
      "metadata": {},
@@ -271,20 +283,679 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 56,
        "text": [
-        "array([  0.00000000e+00,   5.33903438e-01,   1.15566922e+00,\n",
-        "         1.94479316e+00,   2.90659559e+00,   4.05478018e+00,\n",
-        "         5.38347600e+00,   6.86794432e+00,   8.55279152e+00,\n",
-        "         1.03718115e+01,   2.62707054e+02,   2.64676367e+02,\n",
-        "         2.66682805e+02,   2.91550463e+02,   5.11073559e+02,\n",
-        "         5.12342827e+02,   5.13613946e+02,   5.15419624e+02,\n",
-        "         5.15996681e+02,   5.16567597e+02,   5.32968184e+02,\n",
-        "         5.34251648e+02])"
+        "array([[  624.02990723,   655.54571533,   566.63635254, ...,\n",
+        "                   nan,            nan,            nan],\n",
+        "       [ 1229.49621582,  1171.23522949,  1146.23181152, ...,\n",
+        "                   nan,            nan,            nan],\n",
+        "       [  617.56542969,   588.10925293,   570.324646  , ...,\n",
+        "                   nan,            nan,            nan],\n",
+        "       [ 1654.73962402,  1566.22949219,  1537.47729492, ...,\n",
+        "                   nan,            nan,            nan],\n",
+        "       [ 1150.68945312,  1131.14526367,  1134.56091309, ...,\n",
+        "                   nan,            nan,            nan]], dtype=float32)"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 56
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import pylab as plt\n",
+      "for i in range(5):\n",
+      "    plt.plot(thisCam.red_fluxes[i]/np.nanmean(thisCam.red_fluxes[i]), label=i)\n",
+      "plt.legend(loc=0)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 53
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a =tb.FibreTable('cam1/20aug1_combined.fits')\n",
+      "starNames=a.target[a.type=='P']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "len(starNames)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 21,
+       "text": [
+        "74"
+       ]
+      }
+     ],
+     "prompt_number": 21
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in starNames:\n",
+      "    thisStar = star(i)\n",
+      "    thisStar.exposures = exposures()\n",
+      "    thisStar.exposures.load_exposures(thisStar.name)\n",
+      "    thisStar.exposures.calculate_baryVels(thisStar)\n",
+      "    file_pi = open(i+'.obj', 'w') \n",
+      "    pickle.dump(thisStar, file_pi) \n",
+      "    file_pi.close()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Field32 star created\n",
+        "Giant35"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant28"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant12"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant16"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant08"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field05"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field16"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant02"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field34"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field24"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant10"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field28"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant36"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field08"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant13"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field36"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field38"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field39"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field11"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant24"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant03"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant33"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field02"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant18"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant29"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field06"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field15"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant31"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant26"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant38"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field03"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant27"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field23"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field21"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field40"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field25"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant25"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant30"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant37"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant14"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant04"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant05"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field14"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant01"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant34"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field07"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field13"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant17"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field18"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant09"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant06"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field09"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant32"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field17"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field30"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field12"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field27"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant22"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant15"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field04"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant11"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant19"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field19"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field33"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field22"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field37"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant21"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field41"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant23"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field31"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field35"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Field42"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n",
+        "Giant20"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " star created\n"
+       ]
+      }
+     ],
+     "prompt_number": 54
     },
     {
      "cell_type": "code",
